# lorecpp-myst

./: CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
assets/: ASCII.FNT  CHARA.FNT  DECORATE.FNT  DEN.FNT  DEN.PAL  DRACTOWN.BGM  GROUND.FNT  GROUND.PAL  GROUND2.BGM  GROUND4.BGM  GROUND5.BGM  KEEP.FNT  KEEP.PAL  LORE.BGM  MUSIC4.BGM  MUSIC5.BGM  MYSTIC.CMD  ORCTOWN.BGM  SAVE1.M  TOWN.FNT  TROLTOWN.BGM  UNDERGRD.BGM  VALHALLA.BGM
docs/: index.data  index.html  index.js  index.wasm
src/: adlib.cpp  adlib.h  main.cpp  mystbatt.cpp  mystbatt.h  mystcret.cpp  mystcret.h  mystend.cpp  mystend.h  mystent.cpp  mystent.h  mystmain.cpp  mystmain.h  mystmenu.cpp  mystmenu.h  mystspec.cpp  mystspec.h  mystsub.cpp  mystsub.h  mysttal1.cpp  mysttal1.h  mysttal2.cpp  mysttal2.h  mysttalk.cpp  mysttalk.h  mysttime.cpp  mysttime.h  mysttitl.cpp  mysttitl.h  sounddrv.cpp  stubs.cpp  uhanx.cpp  uhanx.h  voice.cpp  voice.h
win32/: mystic.rc
